# CPP-SFML-TEMPLATE

./: CMakeLists.txt  README.md  design.txt  main.cpp
_tests/_test_files/: my_test.cpp  test_component_app.cpp
includes/component/component_include_test/: component_include_test.cpp  component_include_test.h
includes/config/: config.cpp  config.h  system.h
includes/core/config/: system.h
includes/core/engine/: engine.cpp  engine.h
includes/core/header/: header.h
includes/engine/: engine.cpp  engine.h
includes/helper/: helper.h
includes/input_box/: input_box.h
includes/middleware/: middleware.h
includes/singleton/: singleton.h
includes/utils/helper/: helper.h
includes/utils/middleware/: middleware.cpp  middleware.h
